--- a/08-rails/tunr/Gemfile
+++ b/08-rails/tunr/Gemfile
@@ -24,7 +24,10 @@ gem 'turbolinks', '~> 5'
 gem 'jbuilder', '~> 2.5'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
-gem 'therubyracer'
+gem 'mini_racer'
+
+gem 'bootstrap'
+gem 'jquery-rails'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
