--- a/13-react/github-search/package.json
+++ b/13-react/github-search/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "underscore": "^1.12.0"
   }
 }
