--- a/13-react/gatsby/gatsby3/package.json
+++ b/13-react/gatsby/gatsby3/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^3.0.0",
+    "gatsby-plugin-typography": "^3.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "2.2.1"
