--- a/13-react/gatsby/gatsby4/package.json
+++ b/13-react/gatsby/gatsby4/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.0.0",
     "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-typography": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-typography": "^0.16.19",
